# ARCHITECTURE

./: README.md  TASK_INFO.md  readme.md  workspace.dsl
HM 1/: readme.md  workspace.dsl
HW 2/: QUICK_START.md
HW 2/taxi-service/: CMakeLists.txt  Dockerfile
HW 2/taxi-service/data/: taxi.db
HW 2/taxi-service/src/auth/: jwt_auth_checker.hpp  jwt_auth_factory.hpp
HW 2/taxi-service/src/input/: handlers.hpp
HW 2/taxi-service/src/match/: handlers.cpp
HW 2/taxi-service/swagger/: index.html
HW 3/: QUICK_START.md  README.md  TASK_INFO.md
HW 3/taxi-service/: CMakeLists.txt  Dockerfile  data.sql  docker-compose.yaml  init-db.sql  optimization.md  queries.sql  schema.sql
HW 3/taxi-service/configs/: static_config_input.yaml  static_config_match.yaml  static_config_order.yaml
HW 3/taxi-service/src/auth/: jwt_auth_checker.cpp
HW 3/taxi-service/src/common/: database.cpp  database.hpp
HW 3/taxi-service/src/input/: handlers.cpp  main.cpp
HW 3/taxi-service/src/match/: handlers.cpp  handlers.hpp  main.cpp
HW 3/taxi-service/src/order/: handlers.cpp  main.cpp
HW 4/: QUICK_START.md  README.md  TASK_INFO.md
HW 4/taxi-service/: CMakeLists.txt  docker-compose.yaml  openapi.yaml
HW 4/taxi-service/configs/: static_config_input.yaml  static_config_match.yaml  static_config_order.yaml
HW 4/taxi-service/src/common/: models.hpp
HW 4/taxi-service/src/input/: handlers.cpp  handlers.hpp  main.cpp
HW 4/taxi-service/src/match/: handlers.cpp  main.cpp
HW 4/taxi-service/src/order/: handlers.cpp  handlers.hpp  main.cpp
HW 5/: QUICK_START.md  README.md
HW 5/taxi-service/: CMakeLists.txt  docker-compose.yaml  nginx.conf  performance_design.md  schema_design.md  validation.js
HW 5/taxi-service/configs/: static_config_input.yaml  static_config_match.yaml  static_config_mongo.yaml  static_config_order.yaml
HW 5/taxi-service/monitoring/grafana/provisioning/dashboards/: dashboard.yml
HW 5/taxi-service/monitoring/prometheus/: alerts.yml
HW 5/taxi-service/src/common/: metrics_handler.cpp  metrics_handler.hpp  mongo_component.hpp  rate_limiter.hpp
HW 5/taxi-service/src/input/: handlers.cpp  handlers.hpp  main.cpp
HW 5/taxi-service/src/match/: handlers.cpp  handlers.hpp  main.cpp
HW 5/taxi-service/src/order/: handlers.cpp  handlers.hpp  main.cpp
HW 5/taxi-service/tests/: test_cache_rate_limiting.sh
HW 6/: QUICK_START.md  README.md  TASK_INFO.md
HW 6/taxi-service/: CMakeLists.txt  Dockerfile  data.js  docker-compose.yaml  event_catalog.md  event_driven_design.md  init-mongo.js  queries.js
HW 6/taxi-service/configs/: static_config_input.yaml  static_config_match.yaml  static_config_order.yaml
HW 6/taxi-service/monitoring/grafana/dashboards/: cache-rate-limiting-simple.json  performance.json
HW 6/taxi-service/monitoring/prometheus/: prometheus.yml
HW 6/taxi-service/src/auth/: jwt_auth_checker.cpp  jwt_auth_factory.cpp  jwt_auth_factory.hpp
HW 6/taxi-service/src/common/: cache_component.hpp  database.cpp  database.hpp  models.cpp  models.hpp  rabbitmq_consumer.hpp  rabbitmq_producer.hpp
HW 6/taxi-service/src/input/: handlers.cpp  handlers.hpp  main.cpp
HW 6/taxi-service/src/match/: handlers.cpp  handlers.hpp  main.cpp
HW 6/taxi-service/src/order/: handlers.cpp  handlers.hpp  main.cpp
HW 6/taxi-service/tests/: test_event_driven.sh
taxi-service/: docker-compose.yaml  nginx.conf  openapi.yaml
taxi-service/configs/: dynamic_config_fallback.json  static_config_input.yaml  static_config_match.yaml  static_config_order.yaml
taxi-service/data/: taxi.db  taxi.db-shm  taxi.db-wal
taxi-service/src/auth/: jwt_auth_factory.cpp
taxi-service/src/common/: database.cpp  database.hpp  models.cpp  models.hpp
taxi-service/src/input/: handlers.cpp  main.cpp
taxi-service/src/match/: main.cpp
taxi-service/src/order/: handlers.cpp  main.cpp
